<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >


    <RelativeLayout
        android:id="@+id/buttonRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity$PlaceholderFragment"
        >
        <Button
            android:id="@+id/button1"
            style="@style/buttonStyle"
            android:text="@string/adnd0"
            android:onClick="toastOnClick"
            />
        <Button
            android:id="@+id/button2"
            android:layout_below="@+id/button1"
            style="@style/buttonStyle"
            android:text="@string/adnd1"
            android:onClick="toastOnClick"
            />
        <Button
            android:id="@+id/button3"
            android:layout_below="@+id/button2"
            style="@style/buttonStyle"
            android:text="@string/adnd2"
            android:onClick="toastOnClick"
            />
        <Button
            android:id="@+id/button4"
            android:layout_below="@+id/button3"
            style="@style/buttonStyle"
            android:text="@string/adnd3"
            android:onClick="toastOnClick"
            />
        <Button
            android:id="@+id/button5"
            android:layout_below="@+id/button4"
            style="@style/buttonStyle"
            android:text="@string/adnd4"
            android:onClick="toastOnClick"
            />
        <Button
            android:id="@+id/button6"
            android:layout_below="@+id/button5"
            style="@style/buttonStyle"
            android:text="@string/adnd5"
            android:onClick="toastOnClick"
            />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
